@@ -260,7 +260,8 @@ public class Database {
 
         int nbProcess = Runtime.getRuntime().availableProcessors();
 //        int nbProcess = 48;
-        ExecutorService executorService = Executors.newFixedThreadPool(nbProcess);
+        // ExecutorService executorService = Executors.newFixedThreadPool(nbProcess);
+        ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
         List<Future<Void>> futures = new ArrayList<>();
 
         System.out.println("nb process : " + nbProcess);
@@ -716,7 +717,7 @@ public class Database {
         for (Set<Key> s : computedMap.values()) {
             values += s.size() +" ";
 //            k = mapHistogram.ceilingKey(s.size());
-//            v = mapHistogram.get(k) + 1;
+//            v =ex mapHistogram.get(k) + 1;
 //            mapHistogram.put(k, v);
         }
 
